external-crates/move/move-compiler/tests/move_check/parser/positional_struct_fields_with_idents.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/positional_struct_fields_with_idents.move:4:5
  │
4 │     public struct Foo(x: u64) has copy, drop;
  │     ^^^^^^ Struct visibility modifiers are not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01003]: invalid modifier
  ┌─ tests/move_check/parser/positional_struct_fields_with_idents.move:4:5
  │
4 │     public struct Foo(x: u64) has copy, drop;
  │     ^^^^^^ Invalid struct declaration. Structs cannot have visibility modifiers as they are always 'public'
  │
  = Starting in the Move 2024 edition visibility must be annotated on struct declarations.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/positional_struct_fields_with_idents.move:4:22
  │
4 │     public struct Foo(x: u64) has copy, drop;
  │                      ^ Positional fields are not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/positional_struct_fields_with_idents.move:4:24
  │
4 │     public struct Foo(x: u64) has copy, drop;
  │                      - ^ Expected ')'
  │                      │  
  │                      To match this '('

